# llmagent

./: .claudecodeignore  .gitignore  .importlinter  .pre-commit-config.yaml  00_issue-to-require.md  00_issue_to_require.md  00_llm_spec_tobe.md  01_design.md  01_plan.md  01_require-to-plan.md  02_design.md  02_implement.md  02_implement_plan.md  02_plan-to-implementation-procedure.md  03_implementation.md  03_refactor.md  04_rag_refactor.md  04_refactor.md  04_skills.md  04_split_plan.md  04_test.md  05_documentation.md  05_mcp_shell_design.md  05_skills.md  06_documentation.md  07_test-refactor.md  07_test.md  07_test_refactor.md  08_document-refactor.md  08_document_refactor.md  20260626_05_require.md  20260626_12_require.md  20260626_13_require.md  20260626_21_require.md  20260626_45_require.md  20260626_50_require.md  20260627_04_require.md  20260627_08_require.md  20260627_35_require.md  20260627_37_require.md  (+29 more)
.opencode/: skills
conf.d/: cicd-mcp  git-mcp  github-mcp  web-search-mcp
config/: agent.json  agent.toml  browser_mcp_server.toml  chunk_splitter.toml  cicd_mcp_server.toml  common.json  common.toml  context.toml  crawler.toml  eventbus.toml  file_delete_mcp_server.json  file_delete_mcp_server.toml  file_mcp_server.json  file_read_mcp_server.json  file_read_mcp_server.toml  file_write_mcp_server.json  file_write_mcp_server.toml  git_mcp_server.toml  github_mcp_server.json  github_mcp_server.toml  http.toml  ingester.toml  llm.toml  mcp_servers.toml  mdq_mcp_server.json  mdq_mcp_server.toml  memory.toml  otel.toml  rag.toml  rag_mcp_server.json  rag_pipeline.json  rag_pipeline.toml  rag_pipeline_mcp_server.json  rag_pipeline_mcp_server.toml  security.toml  shell_mcp_server.json  shell_mcp_server.toml  sqlite_mcp_server.toml  system_prompts.toml  tools.toml  (+3 more)
db/: rrf.sql
deploy/: build_sqlite_vec.sh  deploy.sh  init_db.sh  setup_services.sh  start_agent.sh
docs/: 00_governance_01_documentation-governance.md  00_governance_02_canonical-source-rule.md  00_governance_03_evidence-labels.md  00_governance_04_known-issues-template.md  00_governance_05_deprecated-items.md  00_governance_06_ai-reading-metadata.md  00_governance_07_needs-confirmation-inventory.md  00_governance_08_known-issues-migration-plan.md  00_index.md  00_llm-implementation-guide.md  01_overview-arch-01-process.md  01_overview-arch-02-pipelines.md  01_overview-arch-03-features.md  01_overview-arch-features.md  01_overview-arch-pipelines.md  01_overview-arch-process.md  01_overview-arch.md  01_overview-files-01-build.md  01_overview-files-02-rag.md  01_overview-files-03-scripts-part1.md  01_overview-files-03-scripts-part2.md  01_overview-files-03-scripts-part3.md  01_overview-files-03-scripts-part4.md  01_overview-files-03-scripts-part5.md  01_overview-files-03-scripts.md  01_overview-files-04-shared-part1.md  01_overview-files-04-shared-part2.md  01_overview-files-04-shared.md  01_overview-files-05-config.md  01_overview-files-06-misc.md  01_overview-files-build.md  01_overview-files-config.md  01_overview-files-db.md  01_overview-files-misc.md  01_overview-files-other.md  01_overview-files-rag-src.md  01_overview-files-rag.md  01_overview-files-scripts.md  01_overview-files-shared.md  01_overview-files.md  (+461 more)
done/: 20260711-170006_test_watchdog_restart_limit_reached.md  20260711-170008_test_tool_registry_counts_per_server_snapshots.md  20260711-170010_new_tool_registration_procedure_tool_names_clarification.md  20260711-170025_test_rag_pipeline_mcp_service_delete_document_cache_tests.md  20260711-170515_test_rag_cache_new_test_file.md  20260711-170533_check_no_compat_reset_registry_for_testing_guard.md  20260711-171556_tool_executor_lifecycle_protocol_consolidation.md  20260711-171622_tool_executor_remove_unused_error_threshold.md  20260711-172633_docs_workflow_require_approval_mechanism_attribution_fix.md  20260711-173151_workflow_models_backoff_comment_fix.md  20260711-173231_tests_workflow_loader_engine_retry_backoff_removal.md  20260711-214056_schema_sql_named_migrations_narrow_error_handling.md  20260711-214149_db_helper_common_toml_error_message_fix.md  20260711-214322_approval_ops_rename_get_latest_approval.md  20260711-214420_docs_workflow_engine_rejection_fallback_clarification.md
implementations/: 20260606-164327_mdq_mcp_server.md  20260606-194433_retriever.md  20260606-194738_shared_global_state.md  20260606-194821_delete_obsolete_files.md  20260606-195109_tool_scheduler.md  20260606-195339_mcp_health_states.md  20260606-195409_rag_stages.md  20260607-092545_20260606-200049_plan.md  20260607-092545_20260606-200508_plan.md  20260607-092545_20260606-200524_plan.md  20260607-092545_20260606-200538_plan.md  20260607-092545_20260606-200608_plan.md  20260608-052717_agent_session.py.md  20260608-052817_agent_history.py.md  20260608-053117_agent_factory.py.md  20260608-053217_agent_repl_health.py.md  20260608-053417_test_lifecycle.py.md  20260608-053517_test_agent_factory.py.md  20260608-053717_agent_orchestrator.py.md  20260608-212054_agent_commands_cmd_db.py.md  20260608-212054_agent_commands_cmd_memory.py.md  20260608-212054_agent_commands_cmd_session.py.md  20260608-212054_rag_stages_augment.py.md  20260608-212054_rag_stages_mqe.py.md  20260608-212054_rag_stages_rerank.py.md  20260608-212054_rag_stages_search.py.md  20260608-212054_scripts_agent_context_detection.py.md  20260608-212054_scripts_agent_memory_scoring.py.md  20260608-212054_shared_formatters.py.md  20260609-122210_injection.py.md  20260609-122211_jsonl_store.py.md  20260609-122212_embedding_client.py.md  20260609-122214_ingestion.py.md  20260609-130048_utils.py.md  20260609-130049_cmd_context.py.md  20260609-131541_mixin_base.py.md  20260609-131542_cmd_ingest.py.md  20260609-131543_context_view.py.md  20260609-131544_undo_service.py.md  20260609-131545_session_title.py.md  (+1039 more)
improvement_proposals/: mcp-server-file-naming.md
init.d/: agent-llm  cicd-mcp  embed-llm  file-delete-mcp  file-mcp  file-read-mcp  file-write-mcp  git-mcp  github-mcp  llama-agent  llama-chat-llm  llama-coding-llm  mdq-mcp  rag-mcp  rag-pipeline-mcp  (+3 more)
(+4848 files in other folders)
