[project]
name = "llmagent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12",
    "duckduckgo-search>=6.0",
    "fastapi>=0.115",
    "gitpython>=3.1",
    "httpx>=0.27",
    "orjson>=3.10",
    "PyGithub>=2.3",
    "pydantic>=2.7",
    "sudachipy>=0.6",
    "sudachidict-core>=20240409",
    "trafilatura>=1.9",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "aiomonitor>=0.7",
    "ast-grep-py>=0.37",
    "bandit[toml]>=1.7",
    "bowler>=0.9",
    "coverage>=7.14.0",
    "diff-cover>=9.0",
    "factory-boy>=3.3",
    "freezegun>=1.5",
    "git-fame>=1.14",
    "grimp>=3.0",
    "httpie>=3.2",
    "hypothesis>=6.100",
    "import-linter>=2.0",
    "ipdb>=0.13",
    "libcst>=1.3",
    "mitmproxy>=10.0",
    "mutmut>=3.0",
    "mypy>=1.10",
    "networkx>=3.3",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
    "py-spy>=0.3",
    "pyan3>=1.1",
    "pydeps>=3.0.6",
    "pyre-check>=0.9.25",
    "pyright>=1.1",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pytest-randomly>=3.15",
    "pytest-rerunfailures>=14.0",
    "pytest-subprocess>=1.5",
    "pytest-testmon>=2.1",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.5",
    "radon>=6.0",
    "respx>=0.21",
    "rich>=13.7",
    "ruff>=0.4",
    "schemathesis>=3.38",
    "semgrep>=1.70",
    "sentry-sdk>=2.0",
    "stackprinter>=0.2",
    "structlog>=24.1",
    "tox>=4.0",
    "types-beautifulsoup4>=4.12",
    "viztracer>=0.17",
    "vulture>=2.11",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["scripts", "."]
include = ["agent*", "db*", "eventbus*", "mcp_servers*", "rag*", "shared*", "tools*"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
# E501 is not auto-fixable in string literals; ruff format handles code line length
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
files = ["scripts/"]
mypy_path = "scripts"
exclude = ["scripts/agent\\.py"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "integration: integration tests that start real subprocesses (deselect with -m 'not integration')",
]

[tool.coverage.run]
source = ["scripts"]
omit = [
    # Schema/migration DDL scripts — executed at deploy time, not during tests
    "scripts/db/create_schema.py",
    "scripts/db/migrate.py",
    # FastAPI server entry points — start HTTP servers; not unit-testable
    "scripts/mcp_servers/file/*_server.py",
    "scripts/mcp_servers/github/server.py",
    "scripts/mcp_servers/shell/server.py",
    "scripts/mcp_servers/web_search/server.py",
    "scripts/mcp_servers/rag_pipeline/server.py",
    # MCP installer — scaffolding tool, not production logic
    "scripts/mcp_servers/installer.py",
    # REPL entry points — interactive CLI; no unit tests by design (documented in CLAUDE.md)
    "scripts/agent.py",
    "scripts/agent/repl.py",
    "scripts/agent/repl_health.py",
    # Ingestion pipeline scripts — bulk I/O; integration-tested separately
    "scripts/rag/ingestion/crawler.py",
    "scripts/rag/ingestion/crawler_utils.py",
    "scripts/rag/ingestion/chunk_splitter.py",
    "scripts/rag/ingestion/chunk_english.py",
    "scripts/rag/ingestion/chunk_japanese.py",
    "scripts/rag/ingestion/ingester.py",
    "scripts/rag/ingestion/pipeline_utils.py",
    # Protocol stub — abstract interface only
    "scripts/db/store.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[project.scripts]
check-mcp-docs = "tools.check_mcp_docs_consistency:main"
check-agent-docs = "tools.check_agent_docs_consistency:main"

[tool.pyright]
pythonVersion = "3.13"
include = ["scripts/"]
reportMissingImports = false
